--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "@emailjs/browser": "^3.10.0",
     "@headlessui/react": "^1.7.12",
     "@heroicons/react": "^2.0.16",
+    "@nextui-org/react": "^2.1.13",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "framer-motion": "^10.10.0",
+    "bootstrap": "^5.2.3",
+    "framer-motion": "^10.16.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-intersection-observer": "^9.4.3",
@@ -20,6 +23,7 @@
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.1",
     "slick-carousel": "^1.8.1",
+    "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
