--- a/package.json
+++ b/package.json
@@ -55,5 +55,10 @@
     "tailwindcss": "^3.2.7",
     "tailwindcss-debug-screens": "^2.2.1",
     "typescript": "^5.2.2"
+  },
+  "overrides": {
+    "react-scripts": {
+      "typescript": "^5"
+    }
   }
 }
