--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.7.1",
+    "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.4.3",
     "react-intl": "^6.5.0",
     "react-router-dom": "^6.8.1",
@@ -23,6 +23,7 @@
     "react-scroll": "^1.8.9",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.1",
+    "sass": "^1.69.5",
     "slick-carousel": "^1.8.1",
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
@@ -52,6 +53,8 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.16",
+    "postcss-import": "^15.1.0",
     "tailwindcss": "^3.2.7",
     "tailwindcss-debug-screens": "^2.2.1",
     "typescript": "^5.2.2"
